restyled animation, color update

--- a/src/hero1/hero1.styles.css
+++ b/src/hero1/hero1.styles.css
@@ -8,164 +8,164 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100vh;
+  width: 55vw;
   height: 70vh;
   background-color: #3d3d3d;
   overflow: hidden;
   font-family: "Ubuntu", sans-serif;
+  margin-top: 5rem;
 }
 
 .hero__container .hello__div {
   width: 100%;
   height: 40vh;
-  background-color: #332d6d;
-  overflow: hidden;
+  background-color: #432f8f;
   position: relative;
 }
 
 .hero__container .hello__div .h__drop {
-  background-color: #e71616;
-  width: 2.5vh;
-  height: 2.5vh;
+  background-color: #db2779;
+  height: 30.4vh;
+  width: 1.5vh;
+  top: -42vh;
+  border-radius: 1vh;
   position: absolute;
-  top: 5vh;
-  opacity: 0;
+  left: 7.5vh;
+  opacity: 1;
+  z-index: 5;
 }
 
 .hero__container .hello__div .h__letter {
   position: absolute;
   bottom: 0;
-  left: 15vh;
+  left: 7vh;
   font-family: "Teko", sans-serif;
-  font-size: 15vh;
+  font-size: 12vh;
   font-weight: 600;
   line-height: 0.6;
-  color: #e71616;
+  color: #db2779;
   opacity: 0;
 }
 
 .hero__container .hello__div .i__drop {
   position: absolute;
-  top: 0;
-  left: 25vh;
-  width: 1.3vh;
-  height: 1.3vh;
+  top: -3vh;
+  left: 14.9vh;
+  width: 1vh;
+  height: 1vh;
   border-radius: 50%;
-  border: 0.5vh solid white;
-  opacity: 0;
+  border: 0.5vh solid #a4db32;
+  opacity: 1;
+  z-index: 5;
 }
 
 .hero__container .hello__div .i__letter {
   position: absolute;
-  left: 25vh;
-  bottom: -10vh;
-  height: 7vh;
-  width: 2.1vh;
-  background-color: #e71616;
+  left: 15vh;
+  bottom: 0.7vh;
+  bottom: -15vh;
+  height: 5vh;
+  width: 1.8vh;
+  background-color: #db2779;
+}
+
+.hero__container .hello__div .web__coma {
+  position: absolute;
+  left: 18vh;
+  bottom: 0;
+  font-size: 7.5vh;
+  font-weight: 600;
+  color: #db2779;
+  opacity: 0;
 }
 
 .hero__container .hello__div .i__dev {
   position: absolute;
   bottom: -15vh;
-  left: 15vh;
-  font-size: 15vh;
+  left: 7vh;
+  font-size: 10.5vh;
   font-weight: 600;
   line-height: 0.9;
-  color: #e71616;
-  opacity: 0;
+  color: #db2779;
+  opacity: 1;
 }
 
 .hero__container .hello__div .m__dev {
   position: absolute;
-  left: 1vh;
+  left: -10vh;
   bottom: 0;
-  font-size: 14vh;
+  font-size: 9.5vh;
   font-weight: 600;
   line-height: 0.9;
-  color: #e71616;
-  opacity: 0;
+  color: #db2779;
+  opacity: 1;
 }
 
 .hero__container .hello__div .paravan__box {
   position: absolute;
   bottom: 0;
-  left: 0.6vh;
-  background-color: #332d6d;
+  left: 0vh;
+  background-color: #432f8f;
   z-index: 5;
 }
 
 .hero__container .hello__div .a__dev {
   position: absolute;
-  left: 38vh;
+  left: 23vh;
   bottom: 0;
-  font-size: 14vh;
+  font-size: 9.5vh;
   font-weight: 600;
   line-height: 0.9;
-  color: #e71616;
+  color: #db2779;
   opacity: 0;
 }
 
 .hero__container .hello__div .web__box {
   position: absolute;
-  right: -8vh;
-  bottom: 0.5vh;
-  width: 10vh;
-  height: 3vh;
-  border: 3px solid rgba(255, 255, 255, 0.3);
-  border-radius: 1vh;
+  left: 90vh;
+  bottom: 0vh;
+  width: 22vh;
+  height: 11vh;
+  background-color: #432f8f;
+  z-index: 5;
 }
 
 .hero__container .hello__div .web__dev {
   position: absolute;
   bottom: 0;
-  left: 110vh;
-  font-size: 13.5vh;
+  left: 90vh;
+  font-size: 9.5vh;
   font-weight: 600;
   font-style: italic;
   line-height: 0.9;
-  color: rgba(255, 255, 255, 0.3);
+  color: #a4db32;
 }
 
 .hero__container .message__div {
   width: 100%;
   height: 30vh;
-  background-color: #332d6d;
+  background-color: #432f8f;
   overflow: hidden;
   position: relative;
 }
 
-.hero__container .message__div .message__drop {
-  position: absolute;
-  top: 0vh;
-  left: 52.5vh;
-  width: 1.3vh;
-  height: 1.3vh;
-  border-radius: 50%;
-  background-color: white;
-  border: 0.5vh solid white;
-  opacity: 0;
-}
-
-.hero__container .message__div .developer__div {
-  position: absolute;
-  left: 15vh;
-  font-size: 14vh;
-  font-weight: 600;
-}
-
 .hero__container .message__div .developer__dev {
   position: absolute;
-  top: 50vh;
-  left: 0;
+  top: 0vh;
+  left: -17vh;
   opacity: 1;
-  color: white;
+  color: #a4db32;
+  font-size: 9.5vh;
+  font-weight: 600;
 }
 
 .hero__container .message__div .developer__o {
   position: absolute;
-  left: 34.5vh;
+  left: 31.2vh;
   top: 0vh;
-  color: white;
+  font-size: 9.5vh;
+  font-weight: 600;
+  color: #a4db32;
   opacity: 0;
 }
 
@@ -173,51 +173,98 @@
   position: absolute;
   top: -15vh;
   left: 23vh;
-  opacity: 1;
-  color: #e71616;
+  font-size: 9.5vh;
+  font-weight: 600;
+  opacity: 0;
+  color: #db2779;
 }
 
 .hero__container .message__div .developer__l {
   position: absolute;
   top: 0;
-  left: 30.5vh;
-  color: #e71616;
+  left: 28.3vh;
+  font-size: 9.5vh;
+  font-weight: 600;
+  color: #db2779;
   opacity: 0;
 }
 
 .hero__container .message__div .developer__p {
   position: absolute;
   top: 0;
-  left: 42.5vh;
+  left: 36.7vh;
+  font-size: 9.5vh;
+  font-weight: 600;
   opacity: 0;
-  color: #e71616;
+  color: #db2779;
 }
 
 .hero__container .message__div .developer__ee {
   position: absolute;
   top: 0;
-  color: #e71616;
   left: 23vh;
+  font-size: 9.5vh;
+  font-weight: 600;
+  color: #db2779;
   z-index: 5;
   opacity: 0;
 }
 
 .hero__container .message__div .developer__r {
   position: absolute;
-  top: 0;
-  left: 58.5vh;
+  top: 10vh;
+  left: 47.8vh;
+  font-size: 9.5vh;
+  font-weight: 600;
+  opacity: 1;
+  color: #db2779;
+}
+
+.hero__container .message__div .r__shield {
+  position: absolute;
+  top: 10vh;
+  left: 47vh;
+  height: 10vh;
+  width: 6vh;
+  background-color: #432f8f;
+}
+
+.hero__container .message__div .developer__dot {
+  position: absolute;
+  top: 0vh;
+  left: 51vh;
+  font-size: 9.5vh;
+  font-weight: 600;
+  color: #db2779;
   opacity: 0;
-  color: #e71616;
 }
 
 .hero__container .developer__l__drop {
   position: absolute;
   top: -53vh;
-  left: 46vh;
-  width: 1.5vh;
+  left: 28.5vh;
+  width: 1vh;
   height: 52vh;
-  border: 0.5vh solid #d31717;
+  border: 0.5vh solid #db2779;
   border-radius: 2vh;
   z-index: 5;
+}
+
+@media screen and (max-width: 1200px) {
+  .hero__container {
+    width: 65vw;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .hero__container {
+    width: 80vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__container {
+    width: 100vw;
+  }
 }
 /*# sourceMappingURL=hero1.styles.css.map */
